# voice-translator

./: .editorconfig  .env.example  Dockerfile  README.md  application.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: app.py  main.py
src/gui/: demo.py
src/services/: text_to_speech.py  translate.py  voice_to_text.py  voice_to_voice.py
src/utils/: logger.py  settings.py
