[tool.poetry]
name = "voice-translator"
version = "0.1.0"
description = "Voice to voice translator (Inspired by: AssemblyAI-Community/Voice-to-Voice-translator)"
authors = ["Lucas Vidor Migotto <lvmigotto1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.44.0"
assemblyai = "^0.33.0"
elevenlabs = "^1.9.0"
translate = "^3.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
